syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/requisition_template.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for ReportConfigs.
service ReportConfigStorage {
  // Gets the idealized Requisitions for a ReportConfig.
  rpc ListRequisitionTemplates(ListRequisitionTemplatesRequest)
      returns (ListRequisitionTemplatesResponse);
}

message ListRequisitionTemplatesRequest {
  fixed64 external_report_config_id = 1;
}

message ListRequisitionTemplatesResponse {
  repeated RequisitionTemplate requisition_templates = 1;
}
